<resources>
    <string name="app_name">LAUNDelivery</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_now">Already have an account? Login</string>
    <string name="register_now">Don\'t have an account? Register</string>
    <string name="logout">Logout</string>
    <string name="user_email">User email</string>
</resources>